删除游戏，只提供游戏平台

--- a/Rules_Provider/Integrate/Game.yaml
+++ b/Rules_Provider/Integrate/Game.yaml
@@ -1,37 +1,4 @@
 payload:
-# > Assassin'sCreed-Odyssey
-  - IP-CIDR,104.75.245.0/24
-  - IP-CIDR,104.95.207.169/32
-  - IP-CIDR,18.204.105.0/24
-  - IP-CIDR,18.204.111.232/32
-  - IP-CIDR,18.204.253.0/24
-  - IP-CIDR,216.98.54.23/32
-  - IP-CIDR,216.98.55.0/24
-  - IP-CIDR,216.98.62.0/24
-  - IP-CIDR,23.2.16.0/24
-  - IP-CIDR,34.237.57.180/32
-  - IP-CIDR,54.81.239.0/24
-  - IP-CIDR,65.200.22.184/32
-  - IP-CIDR,65.200.22.202/32
-  - IP-CIDR,65.200.22.234/32
-  - IP-CIDR,67.15.100.252/32
-# > Assassin'sCreed-Origins
-  - IP-CIDR,104.92.145.0/24
-  - IP-CIDR,216.98.48.0/24
-  - IP-CIDR,216.98.54.0/24
-  - IP-CIDR,216.98.62.0/24
-  - IP-CIDR,23.2.16.0/24
-  - IP-CIDR,23.46.222.0/24
-  - IP-CIDR,34.224.248.0/24
-  - IP-CIDR,34.236.89.0/24
-  - IP-CIDR,34.238.66.0/24
-  - IP-CIDR,52.2.79.0/24
-  - IP-CIDR,52.216.16.0/24
-  - IP-CIDR,52.229.171.0/24
-  - IP-CIDR,52.5.27.0/24
-  - IP-CIDR,65.200.22.202/32
-  - IP-CIDR,65.200.22.234/32
-  - IP-CIDR,67.228.235.91/32
 # > Battle
   - DOMAIN-SUFFIX,battle.net
   - DOMAIN-SUFFIX,blizzard.com
@@ -287,7 +254,6 @@ payload:
   - DOMAIN-SUFFIX,unrealengine.com
   - DOMAIN-SUFFIX,unrealtournament.com
 # > Garena
-  - DOMAIN,dlgarenanow-a.akamaihd.net
   - DOMAIN-SUFFIX,avatargarenanow-a.akamaihd.net
   - DOMAIN-SUFFIX,cdngarenanow-a.akamaihd.net
   - DOMAIN-SUFFIX,dlmobilegarena-a.akamaihd.net
@@ -391,7 +357,6 @@ payload:
   - DOMAIN-SUFFIX,pokemon-moon.com
   - DOMAIN-SUFFIX,pokemon-sun.com
   - DOMAIN-SUFFIX,pokemon-sunmoon.com
-  - DOMAIN-SUFFIX,pokemon-unitepgame.com
   - DOMAIN-SUFFIX,pokemon.com
   - DOMAIN-SUFFIX,pokemonbank.com
   - DOMAIN-SUFFIX,pokemonblackwhite.com
@@ -436,7 +401,7 @@ payload:
   - DOMAIN-SUFFIX,xn--mts47c3w9b1qr.cn
   - DOMAIN-SUFFIX,xn--mts47c3w9b1qr.net
   - DOMAIN-SUFFIX,yoshisnewisland.com
-  - IP-CIDR,35.192.0.0/12
+  - IP-CIDR,35.192.0.0/12,no-resolve
 # > Origin
   - DOMAIN,cloudsync-prod.s3.amazonaws.com
   - DOMAIN-SUFFIX,dawngate.com
@@ -514,17 +479,7 @@ payload:
   - DOMAIN-SUFFIX,rockstargames.com
   - DOMAIN-SUFFIX,rsg.sc
   - DOMAIN-SUFFIX,videos-rockstargames-com.akamaized.net
-# > StarCraftII
-  - IP-CIDR,103.4.114.233/32
-  - IP-CIDR,185.60.112.157/32
-  - IP-CIDR,185.60.112.158/32
-  - IP-CIDR,185.60.114.159/32
-  - IP-CIDR,202.9.67.254/32
-  - IP-CIDR,222.231.22.1/32
-  - IP-CIDR,24.105.30.129/32
-  - IP-CIDR,24.105.62.129/32
 # > Steam
-  - DOMAIN,csgo.wmsj.cn
   - DOMAIN-KEYWORD,steambroadcast
   - DOMAIN-KEYWORD,steamstore
   - DOMAIN-KEYWORD,steamuserimages
@@ -536,7 +491,6 @@ payload:
   - DOMAIN-SUFFIX,dl.steam.clngaa.com
   - DOMAIN-SUFFIX,dl.steam.ksyna.com
   - DOMAIN-SUFFIX,dota2.wmsj.cn
-  - DOMAIN-SUFFIX,edge.steam-dns.top.comcast.net
   - DOMAIN-SUFFIX,fanatical.com
   - DOMAIN-SUFFIX,humblebundle.com
   - DOMAIN-SUFFIX,playartifact.com
@@ -546,14 +500,6 @@ payload:
   - DOMAIN-SUFFIX,st.dl.pinyuncloud.com
   - DOMAIN-SUFFIX,steam-api.com
   - DOMAIN-SUFFIX,steam-chat.com
-  - DOMAIN-SUFFIX,steam.apac.qtlglb.com
-  - DOMAIN-SUFFIX,steam.cdn.on.net
-  - DOMAIN-SUFFIX,steam.cdn.orcon.net.nz
-  - DOMAIN-SUFFIX,steam.cdn.slingshot.co.nz
-  - DOMAIN-SUFFIX,steam.cdn.webra.ru
-  - DOMAIN-SUFFIX,steam.eca.qtlglb.com
-  - DOMAIN-SUFFIX,steam.naeu.qtlglb.com
-  - DOMAIN-SUFFIX,steam.ru.qtlglb.com
   - DOMAIN-SUFFIX,steambroadcast.akamaized.net
   - DOMAIN-SUFFIX,steamcdn-a.akamaihd.net
   - DOMAIN-SUFFIX,steamchina.com
@@ -561,7 +507,6 @@ payload:
   - DOMAIN-SUFFIX,steamcommunity.com
   - DOMAIN-SUFFIX,steamcontent.com
   - DOMAIN-SUFFIX,steamcontent.tnkjmec.com
-  - DOMAIN-SUFFIX,steamdeck.com
   - DOMAIN-SUFFIX,steamgames.com
   - DOMAIN-SUFFIX,steampipe.akamaized.net
   - DOMAIN-SUFFIX,steampowered.com
@@ -579,68 +524,25 @@ payload:
   - DOMAIN-SUFFIX,underlords.com
   - DOMAIN-SUFFIX,valvesoftware.com
   - DOMAIN-SUFFIX,wmsjsteam.com
+  - DOMAIN,csgo.wmsj.cn
   - DOMAIN,dl.steam.clngaa.com
   - DOMAIN,dl.steam.ksyna.com
   - DOMAIN,dota2.wmsj.cn
-  - DOMAIN,f3b7q2p3.ssl.hwcdn.net
   - DOMAIN,st.dl.bscstorage.net
   - DOMAIN,st.dl.eccdnx.com
   - DOMAIN,st.dl.pinyuncloud.com
   - DOMAIN,steammobile.akamaized.net
-  - DOMAIN,steampipe-kr.akamaized.net
-  - DOMAIN,steampipe-partner.akamaized.net
   - DOMAIN,steampipe.steamcontent.tnkjmec.com
   - DOMAIN,steampowered.com.8686c.com
   - DOMAIN,steamstatic.com.8686c.com
   - DOMAIN,wmsjsteam.com
   - DOMAIN,xz.pphimalayanrt.com
-# > Supercell
-  - DOMAIN-SUFFIX,brawlstars.com
-  - DOMAIN-SUFFIX,brawlstarsgame.com
-  - IP-CIDR,13.210.25.233/32
-  - IP-CIDR,13.212.170.102/32
-  - IP-CIDR,13.212.171.212/32
-  - IP-CIDR,15.161.130.86/32
-  - IP-CIDR,15.254.1.17/32
-  - IP-CIDR,162.62.33.45/32
-  - IP-CIDR,162.62.33.70/32
-  - IP-CIDR,162.62.34.10/32
-  - IP-CIDR,18.141.176.65/32
-  - IP-CIDR,18.156.137.147/32
-  - IP-CIDR,18.231.148.103/32
-  - IP-CIDR,3.1.80.68/32
-  - IP-CIDR,3.25.190.152/32
-  - IP-CIDR,3.82.147.36/32
-  - IP-CIDR,34.220.160.16/32
-  - IP-CIDR,35.154.64.7/32
-  - IP-CIDR,35.72.32.125/32
-  - IP-CIDR,52.13.150.128/32
-  - IP-CIDR,52.13.42.120/32
-  - IP-CIDR,52.50.131.212/32
-  - IP-CIDR,54.207.168.84/32
-  - IP-CIDR,54.248.64.192/32
-# > WildRift
-  - DOMAIN-SUFFIX,pvp.net
-  - DOMAIN-SUFFIX,riotcdn.net
-  - DOMAIN-SUFFIX,riotgames.com
-# > WorldofWarcraft
-  - IP-CIDR,103.4.115.248/32
-  - IP-CIDR,137.221.105.2/32
-  - IP-CIDR,185.60.112.157/32
-  - IP-CIDR,185.60.112.158/32
-  - IP-CIDR,185.60.114.159/32
-  - IP-CIDR,210.71.148.11/32
-  - IP-CIDR,211.115.104.1/32
-  - IP-CIDR,24.105.62.129/32
 # > Xbox
-  - DOMAIN-SUFFIX,playfabapi.com
   - DOMAIN-SUFFIX,beth.games
   - DOMAIN-SUFFIX,bethesda.net
   - DOMAIN-SUFFIX,bethesdagamestudios.com
   - DOMAIN-SUFFIX,bethsoft.com
   - DOMAIN-SUFFIX,callersbane.com
-  - DOMAIN-SUFFIX,doom.com
-  - DOMAIN-SUFFIX,elderscrolls.com
   - DOMAIN-SUFFIX,forzamotorsport.net
   - DOMAIN-SUFFIX,forzaracingchampionship.com
   - DOMAIN-SUFFIX,forzarc.com
