--- a/Rules_Provider/Complete/Game/Nintendo.yaml
+++ b/Rules_Provider/Complete/Game/Nintendo.yaml
@@ -83,7 +83,6 @@ payload:
   - DOMAIN-SUFFIX,pokemon-moon.com
   - DOMAIN-SUFFIX,pokemon-sun.com
   - DOMAIN-SUFFIX,pokemon-sunmoon.com
-  - DOMAIN-SUFFIX,pokemon-unitepgame.com
   - DOMAIN-SUFFIX,pokemon.com
   - DOMAIN-SUFFIX,pokemonbank.com
   - DOMAIN-SUFFIX,pokemonblackwhite.com
@@ -128,4 +127,4 @@ payload:
   - DOMAIN-SUFFIX,xn--mts47c3w9b1qr.cn
   - DOMAIN-SUFFIX,xn--mts47c3w9b1qr.net
   - DOMAIN-SUFFIX,yoshisnewisland.com
-  - IP-CIDR,35.192.0.0/12
+  - IP-CIDR,35.192.0.0/12,no-resolve
