--- a/Rules_Provider/Complete/GlobalMedia/EncoreTVB.yaml
+++ b/Rules_Provider/Complete/GlobalMedia/EncoreTVB.yaml
@@ -1,8 +1,8 @@
 # > EncoreTVB
 # 总条数: 5条
 payload:
-  - DOMAIN-SUFFIX,content.jwplatform.com
   - DOMAIN-SUFFIX,encoretvb.com
-  - DOMAIN-SUFFIX,videos-f.jwpsrv.com
   - DOMAIN,bcbolt446c5271-a.akamaihd.net
+  - DOMAIN,content.jwplatform.com
   - DOMAIN,edge.api.brightcove.com
+  - DOMAIN,videos-f.jwpsrv.com
