--- a/Rules_Provider/Complete/GlobalMedia/JOOX.yaml
+++ b/Rules_Provider/Complete/GlobalMedia/JOOX.yaml
@@ -5,6 +5,6 @@ payload:
   - DOMAIN-SUFFIX,i-joox.com
   - DOMAIN-SUFFIX,joox.com
   - DOMAIN-SUFFIX,sanook.com
-  - IP-CIDR,119.28.182.0/23
-  - IP-CIDR,203.205.234.0/23
+  - IP-CIDR,119.28.182.0/23,no-resolve
+  - IP-CIDR,203.205.234.0/23,no-resolve
   - PROCESS-NAME,com.tencent.ibg.joox
