--- a/Rules_Provider/Complete/GlobalMedia/WeTV.yaml
+++ b/Rules_Provider/Complete/GlobalMedia/WeTV.yaml
@@ -8,6 +8,6 @@ payload:
   - DOMAIN-SUFFIX,vv.video.qq.com
   - DOMAIN-SUFFIX,wetv.vip
   - DOMAIN-SUFFIX,wetvinfo.com
-  - IP-CIDR,150.109.28.51/32
+  - IP-CIDR,150.109.28.51/32,no-resolve
   - PROCESS-NAME,com.tencent.qqlivei18n
   - PROCESS-NAME,com.tencent.qqlivei18n.us
