--- a/Rules_Provider/Complete/Other/Google.yaml
+++ b/Rules_Provider/Complete/Other/Google.yaml
@@ -4,8 +4,8 @@ payload:
   - DOMAIN-KEYWORD,appspot
   - DOMAIN-KEYWORD,blogspot
   - DOMAIN-KEYWORD,gmail
+  - DOMAIN-KEYWORD,google
   - DOMAIN-KEYWORD,recaptcha
-  - DOMAIN-KEYWORD,www.google.
   - DOMAIN-SUFFIX,0emm.com
   - DOMAIN-SUFFIX,1e100.net
   - DOMAIN-SUFFIX,1ucrs.com
@@ -203,16 +203,12 @@ payload:
   - DOMAIN-SUFFIX,distribution.qatp1.net
   - DOMAIN-SUFFIX,distribution.qcpp1.net
   - DOMAIN-SUFFIX,distribution.qpdp1.net
-  - DOMAIN-SUFFIX,docs.google.com
   - DOMAIN-SUFFIX,doubleclick-cn.net
   - DOMAIN-SUFFIX,doubleclick.com
   - DOMAIN-SUFFIX,doubleclick.net
   - DOMAIN-SUFFIX,download.qatp1.net
   - DOMAIN-SUFFIX,download.qcpp1.net
   - DOMAIN-SUFFIX,download.qpdp1.net
-  - DOMAIN-SUFFIX,drive.google.com
-  - DOMAIN-SUFFIX,earth-pa.clients6.google.com
-  - DOMAIN-SUFFIX,earth.google.com
   - DOMAIN-SUFFIX,episodic.com
   - DOMAIN-SUFFIX,fastlane.ci
   - DOMAIN-SUFFIX,fastlane.tools
@@ -555,19 +551,6 @@ payload:
   - DOMAIN-SUFFIX,keytransparency.com
   - DOMAIN-SUFFIX,keytransparency.foo
   - DOMAIN-SUFFIX,keytransparency.org
-  - DOMAIN-SUFFIX,kh.google.com
-  - DOMAIN-SUFFIX,khm.google.com
-  - DOMAIN-SUFFIX,khm.googleapis.com
-  - DOMAIN-SUFFIX,khm0.google.com
-  - DOMAIN-SUFFIX,khm0.googleapis.com
-  - DOMAIN-SUFFIX,khm1.google.com
-  - DOMAIN-SUFFIX,khm1.googleapis.com
-  - DOMAIN-SUFFIX,khm2.google.com
-  - DOMAIN-SUFFIX,khm2.googleapis.com
-  - DOMAIN-SUFFIX,khm3.google.com
-  - DOMAIN-SUFFIX,khm3.googleapis.com
-  - DOMAIN-SUFFIX,khmdb.google.com
-  - DOMAIN-SUFFIX,khmdb.googleapis.com
   - DOMAIN-SUFFIX,lanternal.com
   - DOMAIN-SUFFIX,like.com
   - DOMAIN-SUFFIX,madewithcode.com
@@ -580,7 +563,6 @@ payload:
   - DOMAIN-SUFFIX,monitoring.qcpp1.net
   - DOMAIN-SUFFIX,monitoring.qpdp1.net
   - DOMAIN-SUFFIX,moodstocks.com
-  - DOMAIN-SUFFIX,mw1.google.com
   - DOMAIN-SUFFIX,near.by
   - DOMAIN-SUFFIX,nest.com
   - DOMAIN-SUFFIX,neverware.com
@@ -675,7 +657,6 @@ payload:
   - DOMAIN-SUFFIX,stxmosquitoproject.org
   - DOMAIN-SUFFIX,synergyse.com
   - DOMAIN-SUFFIX,teachparentstech.org
-  - DOMAIN-SUFFIX,telephony.goog
   - DOMAIN-SUFFIX,tensorflow.org
   - DOMAIN-SUFFIX,tfhub.dev
   - DOMAIN-SUFFIX,thecleversense.com
@@ -735,48 +716,12 @@ payload:
   - DOMAIN-SUFFIX,xplr.co
   - DOMAIN-SUFFIX,zukunftswerkstatt.de
   - DOMAIN-SUFFIX,zynamics.com
-  - DOMAIN,alt1-mtalk.google.com
-  - DOMAIN,alt2-mtalk.google.com
-  - DOMAIN,alt3-mtalk.google.com
-  - DOMAIN,alt4-mtalk.google.com
-  - DOMAIN,alt5-mtalk.google.com
-  - DOMAIN,alt6-mtalk.google.com
-  - DOMAIN,alt7-mtalk.google.com
-  - DOMAIN,alt8-mtalk.google.com
-  - DOMAIN,lens.l.google.com
-  - DOMAIN,mtalk.google.com
-  - DOMAIN,www.googleapis.com
-  - IP-CIDR,108.177.125.188/32
-  - IP-CIDR,142.250.10.188/32
-  - IP-CIDR,142.250.31.188/32
-  - IP-CIDR,142.250.4.188/32
-  - IP-CIDR,142.250.96.188/32
-  - IP-CIDR,172.110.32.0/21
-  - IP-CIDR,172.217.194.188/32
-  - IP-CIDR,172.217.218.188/32
-  - IP-CIDR,172.217.219.188/32
-  - IP-CIDR,172.253.122.188/32
-  - IP-CIDR,172.253.63.188/32
-  - IP-CIDR,173.194.0.0/16
-  - IP-CIDR,173.194.175.188/32
-  - IP-CIDR,173.194.218.188/32
-  - IP-CIDR,209.85.233.188/32
-  - IP-CIDR,216.73.80.0/20
-  - IP-CIDR,64.233.177.188/32
-  - IP-CIDR,64.233.186.188/32
-  - IP-CIDR,64.233.187.188/32
-  - IP-CIDR,64.233.188.188/32
-  - IP-CIDR,64.233.189.188/32
-  - IP-CIDR,74.125.0.0/16
-  - IP-CIDR,74.125.127.188/32
-  - IP-CIDR,74.125.137.188/32
-  - IP-CIDR,74.125.203.188/32
-  - IP-CIDR,74.125.204.188/32
-  - IP-CIDR,74.125.206.188/32
-  - IP-CIDR,74.125.23.188/32
-  - IP-CIDR,74.125.24.188/32
-  - IP-CIDR,74.125.28.188/32
-  - IP-CIDR6,2620:120:e000::/40
+  - DOMAIN,voice.telephony.goog
+  - IP-CIDR,172.110.32.0/21,no-resolve
+  - IP-CIDR,173.194.0.0/16,no-resolve
+  - IP-CIDR,216.73.80.0/20,no-resolve
+  - IP-CIDR,74.125.0.0/16,no-resolve
+  - IP-CIDR6,2620:120:e000::/40,no-resolve
   - PROCESS-NAME,BackupandSync
   - PROCESS-NAME,com.android.vending
   - PROCESS-NAME,com.google.android.gms
