--- a/Rules_Provider/Complete/Other/EHentai.yaml
+++ b/Rules_Provider/Complete/Other/EHentai.yaml
@@ -7,7 +7,7 @@ payload:
   - DOMAIN-SUFFIX,exhentai.org
   - DOMAIN-SUFFIX,hath.network
   - DOMAIN-SUFFIX,hentaiverse.org
-  - IP-CIDR,178.175.128.0/21
+  - IP-CIDR,178.175.128.0/21,no-resolve
   - PROCESS-NAME,com.honjow.fehviewer
   - PROCESS-NAME,com.xjs.ehviewer
   - PROCESS-NAME,ehviewer
