--- a/Rules_Provider/Complete/Other/Microsoft.yaml
+++ b/Rules_Provider/Complete/Other/Microsoft.yaml
@@ -108,10 +108,16 @@ payload:
   - DOMAIN-SUFFIX,binb.com
   - DOMAIN-SUFFIX,binf.com
   - DOMAIN-SUFFIX,bing
+  - DOMAIN-SUFFIX,bing.com
+  - DOMAIN-SUFFIX,bing.com.cn
+  - DOMAIN-SUFFIX,bing.net
   - DOMAIN-SUFFIX,bing123.com
   - DOMAIN-SUFFIX,bing135.com
   - DOMAIN-SUFFIX,bing4.com
+  - DOMAIN-SUFFIX,bingads.com
+  - DOMAIN-SUFFIX,bingagencyawards.com
   - DOMAIN-SUFFIX,bingapis.com
+  - DOMAIN-SUFFIX,bingapistatistics.com
   - DOMAIN-SUFFIX,binginternal.com
   - DOMAIN-SUFFIX,bingit.net
   - DOMAIN-SUFFIX,bingiton.com
@@ -119,8 +125,11 @@ payload:
   - DOMAIN-SUFFIX,bingpix.com
   - DOMAIN-SUFFIX,bingpk.com
   - DOMAIN-SUFFIX,bings.com
+  - DOMAIN-SUFFIX,bingsandbox.com
   - DOMAIN-SUFFIX,bingtoolbar.com
   - DOMAIN-SUFFIX,bingtranslator.com
+  - DOMAIN-SUFFIX,bingvisualsearch.com
+  - DOMAIN-SUFFIX,bingworld.com
   - DOMAIN-SUFFIX,biying.cn
   - DOMAIN-SUFFIX,biying.com
   - DOMAIN-SUFFIX,biying.com.cn
@@ -128,6 +137,7 @@ payload:
   - DOMAIN-SUFFIX,blueaggrestore.com
   - DOMAIN-SUFFIX,bluecloudprod.com
   - DOMAIN-SUFFIX,bluehatil.com
+  - DOMAIN-SUFFIX,bluehatnights.com
   - DOMAIN-SUFFIX,boswp.com
   - DOMAIN-SUFFIX,botframework.com
   - DOMAIN-SUFFIX,brazilpartneruniversity.com
@@ -156,8 +166,10 @@ payload:
   - DOMAIN-SUFFIX,cs9.wac.phicdn.net
   - DOMAIN-SUFFIX,devopsassessment.net
   - DOMAIN-SUFFIX,devopsms.com
+  - DOMAIN-SUFFIX,dictate.ms
   - DOMAIN-SUFFIX,discoverbing.com
   - DOMAIN-SUFFIX,docs.com
+  - DOMAIN-SUFFIX,doom.com
   - DOMAIN-SUFFIX,dot.net
   - DOMAIN-SUFFIX,dwh5.com
   - DOMAIN-SUFFIX,dynamics.cn
@@ -165,6 +177,7 @@ payload:
   - DOMAIN-SUFFIX,e-msedge.net
   - DOMAIN-SUFFIX,edgesuite.net
   - DOMAIN-SUFFIX,efproject.net
+  - DOMAIN-SUFFIX,elderscrolls.com
   - DOMAIN-SUFFIX,engkoo.com
   - DOMAIN-SUFFIX,evoke-windowsservices-tas.msedge
   - DOMAIN-SUFFIX,exp-tas.com
@@ -172,6 +185,7 @@ payload:
   - DOMAIN-SUFFIX,fabric.io
   - DOMAIN-SUFFIX,fasttrackreadysupport.com
   - DOMAIN-SUFFIX,femalefounderscomp.com
+  - DOMAIN-SUFFIX,flipwithsurface.com
   - DOMAIN-SUFFIX,fluidpreview.com
   - DOMAIN-SUFFIX,footprintdns.com
   - DOMAIN-SUFFIX,g.akamaiedge.net
@@ -240,6 +254,7 @@ payload:
   - DOMAIN-SUFFIX,management-azure-devices.net
   - DOMAIN-SUFFIX,mapblast.com
   - DOMAIN-SUFFIX,mappoint.com
+  - DOMAIN-SUFFIX,masalladeloslimites.com
   - DOMAIN-SUFFIX,mcchcdn.com
   - DOMAIN-SUFFIX,meetfasttrack.com
   - DOMAIN-SUFFIX,meetyourdevices.com
@@ -249,6 +264,7 @@ payload:
   - DOMAIN-SUFFIX,microbit.org
   - DOMAIN-SUFFIX,microsoft
   - DOMAIN-SUFFIX,microsoft-falcon.io
+  - DOMAIN-SUFFIX,microsoft-give.com
   - DOMAIN-SUFFIX,microsoft-int.com
   - DOMAIN-SUFFIX,microsoft-online.cn
   - DOMAIN-SUFFIX,microsoft-online.com.cn
@@ -308,8 +324,10 @@ payload:
   - DOMAIN-SUFFIX,microsoftazuresponsorships.com
   - DOMAIN-SUFFIX,microsoftazurestatus.cn
   - DOMAIN-SUFFIX,microsoftcloud.com
+  - DOMAIN-SUFFIX,microsoftcloudsummit.com
   - DOMAIN-SUFFIX,microsoftcloudworkshop.com
   - DOMAIN-SUFFIX,microsoftcommunitytraining.com
+  - DOMAIN-SUFFIX,microsoftdiplomados.com
   - DOMAIN-SUFFIX,microsofteca.com
   - DOMAIN-SUFFIX,microsoftedge.com
   - DOMAIN-SUFFIX,microsoftedgeinsider.com
@@ -322,8 +340,10 @@ payload:
   - DOMAIN-SUFFIX,microsoftiotcentral.com
   - DOMAIN-SUFFIX,microsoftiotinsiderlabs.com
   - DOMAIN-SUFFIX,microsoftlatamaitour.com
+  - DOMAIN-SUFFIX,microsoftlatamholiday.com
   - DOMAIN-SUFFIX,microsoftlinc.com
   - DOMAIN-SUFFIX,microsoftmetrics.cn
+  - DOMAIN-SUFFIX,microsoftmxfilantropia.com
   - DOMAIN-SUFFIX,microsoftnews.cc
   - DOMAIN-SUFFIX,microsoftnews.cn
   - DOMAIN-SUFFIX,microsoftnews.com
@@ -349,6 +369,7 @@ payload:
   - DOMAIN-SUFFIX,microsoftonline.cn
   - DOMAIN-SUFFIX,microsoftonline.com
   - DOMAIN-SUFFIX,microsoftpartnercommunity.com
+  - DOMAIN-SUFFIX,microsoftpartnersolutions.com
   - DOMAIN-SUFFIX,microsoftreactor.cn
   - DOMAIN-SUFFIX,microsoftreactor.com.cn
   - DOMAIN-SUFFIX,microsoftreactor.info
@@ -360,6 +381,7 @@ payload:
   - DOMAIN-SUFFIX,microsoftsilverlight.org
   - DOMAIN-SUFFIX,microsoftsiteselection.com
   - DOMAIN-SUFFIX,microsoftsqlserver.com
+  - DOMAIN-SUFFIX,microsoftstart.com
   - DOMAIN-SUFFIX,microsoftstore.com
   - DOMAIN-SUFFIX,microsoftstore.com.cn
   - DOMAIN-SUFFIX,microsoftstore.com.hk
@@ -433,6 +455,7 @@ payload:
   - DOMAIN-SUFFIX,mstea.ms
   - DOMAIN-SUFFIX,msturing.org
   - DOMAIN-SUFFIX,msudalosti.com
+  - DOMAIN-SUFFIX,msunlimitedcloudsummit.com
   - DOMAIN-SUFFIX,msvevent.com
   - DOMAIN-SUFFIX,msxiaobing.com
   - DOMAIN-SUFFIX,msxiaoice.com
@@ -464,13 +487,11 @@ payload:
   - DOMAIN-SUFFIX,officeppe.net
   - DOMAIN-SUFFIX,officewebapps.cn
   - DOMAIN-SUFFIX,omniroot.com
-  - DOMAIN-SUFFIX,oneclient.sfx.ms
   - DOMAIN-SUFFIX,onecollector.cloudapp.aria
   - DOMAIN-SUFFIX,onedrive.co
   - DOMAIN-SUFFIX,onedrive.co.uk
   - DOMAIN-SUFFIX,onedrive.com
   - DOMAIN-SUFFIX,onedrive.eu
-  - DOMAIN-SUFFIX,onedrive.live.com
   - DOMAIN-SUFFIX,onedrive.net
   - DOMAIN-SUFFIX,onedrive.org
   - DOMAIN-SUFFIX,onenote.com
@@ -491,7 +512,6 @@ payload:
   - DOMAIN-SUFFIX,passport.net
   - DOMAIN-SUFFIX,pbiwebcontent.cn
   - DOMAIN-SUFFIX,phonefactor.net
-  - DOMAIN-SUFFIX,photos.live.com
   - DOMAIN-SUFFIX,pixapp.net
   - DOMAIN-SUFFIX,playfabapi.cn
   - DOMAIN-SUFFIX,playfabcn.com
@@ -512,6 +532,7 @@ payload:
   - DOMAIN-SUFFIX,pxt.io
   - DOMAIN-SUFFIX,reactorms.com.cn
   - DOMAIN-SUFFIX,renlifang.com
+  - DOMAIN-SUFFIX,renovacionoffice.com
   - DOMAIN-SUFFIX,s-microsoft.com
   - DOMAIN-SUFFIX,s-msedge.net
   - DOMAIN-SUFFIX,s-msft.com
@@ -526,7 +547,6 @@ payload:
   - DOMAIN-SUFFIX,sharepoint.com
   - DOMAIN-SUFFIX,sharepointonline.com
   - DOMAIN-SUFFIX,signalr.net
-  - DOMAIN-SUFFIX,skydrive.wns.windows.com
   - DOMAIN-SUFFIX,skype
   - DOMAIN-SUFFIX,skype.com
   - DOMAIN-SUFFIX,skype.net
@@ -534,14 +554,14 @@ payload:
   - DOMAIN-SUFFIX,skypeassets.net
   - DOMAIN-SUFFIX,skypeforbusiness.com
   - DOMAIN-SUFFIX,spoprod-a.akamaihd.net
+  - DOMAIN-SUFFIX,sprinklesapp.com
   - DOMAIN-SUFFIX,sqlserveronlinux.com
   - DOMAIN-SUFFIX,staffhub.ms
+  - DOMAIN-SUFFIX,start.com
   - DOMAIN-SUFFIX,statics-marketingsites-eas-ms-com.akamaized.net
   - DOMAIN-SUFFIX,statics-marketingsites-eus-ms-com.akamaized.net
   - DOMAIN-SUFFIX,statics-marketingsites-neu-ms-com.akamaized.net
   - DOMAIN-SUFFIX,statics-marketingsites-wcus-ms-com.akamaized.net
-  - DOMAIN-SUFFIX,storage.live.com
-  - DOMAIN-SUFFIX,storage.msn.com
   - DOMAIN-SUFFIX,successwithteams.com
   - DOMAIN-SUFFIX,surface.com
   - DOMAIN-SUFFIX,svc.ms
@@ -611,11 +631,6 @@ payload:
   - DOMAIN-SUFFIX,xamarin.com
   - DOMAIN-SUFFIX,yammer.com
   - DOMAIN-SUFFIX,yammerusercontent.com
-  - DOMAIN,edge.activity.windows.com
-  - DOMAIN,edge.microsoft.com
-  - DOMAIN,github-cloud.s3.amazonaws.com
-  - DOMAIN,iecvlist.microsoft.com
-  - DOMAIN,msedge.api.cdp.microsoft.com
   - DOMAIN,vsmarketplacebadge.apphb.com
   - PROCESS-NAME,OneDrive
   - PROCESS-NAME,OneDriveUpdater
