--- a/Rules_Provider/Complete/Other/Telegram.yaml
+++ b/Rules_Provider/Complete/Other/Telegram.yaml
@@ -2,9 +2,11 @@
 # 总条数: 43条
 payload:
   - DOMAIN-KEYWORD,nicegram
+  - DOMAIN-SUFFIX,cdn-telegram.org
   - DOMAIN-SUFFIX,comments.app
   - DOMAIN-SUFFIX,contest.com
   - DOMAIN-SUFFIX,graph.org
+  - DOMAIN-SUFFIX,legra.ph
   - DOMAIN-SUFFIX,mbrx.app
   - DOMAIN-SUFFIX,quiz.directory
   - DOMAIN-SUFFIX,stel.com
@@ -22,16 +24,16 @@ payload:
   - DOMAIN-SUFFIX,tg.dev
   - DOMAIN-SUFFIX,tx.me
   - DOMAIN-SUFFIX,usercontent.dev
-  - IP-CIDR,109.239.140.0/24
-  - IP-CIDR,149.154.160.0/20
-  - IP-CIDR,5.28.195.163/32
-  - IP-CIDR,5.28.195.205/32
-  - IP-CIDR,5.28.195.37/32
-  - IP-CIDR,91.108.0.0/16
-  - IP-CIDR6,2001:67c:4e8::/48
-  - IP-CIDR6,2001:b28:f23c::/47
-  - IP-CIDR6,2001:b28:f23f::/48
-  - IP-CIDR6,2a0a:f280::/32
+  - DOMAIN,api.imem.app
+  - DOMAIN,api.swiftgram.app
+  - IP-CIDR,109.239.140.0/24,no-resolve
+  - IP-CIDR,149.154.160.0/20,no-resolve
+  - IP-CIDR,5.28.192.0/18,no-resolve
+  - IP-CIDR,91.108.0.0/16,no-resolve
+  - IP-CIDR6,2001:67c:4e8::/48,no-resolve
+  - IP-CIDR6,2001:b28:f23c::/47,no-resolve
+  - IP-CIDR6,2001:b28:f23f::/48,no-resolve
+  - IP-CIDR6,2a0a:f280::/29,no-resolve
   - PROCESS-NAME,nekox.messenger
   - PROCESS-NAME,org.telegram.messenger
   - PROCESS-NAME,telegram-desktop
