--- a/MyConvert/MyRules_YTOO_Meta.ini
+++ b/MyConvert/MyRules_YTOO_Meta.ini
@@ -8,10 +8,13 @@ ruleset=DIRECT,[]GEOSITE,tracker
 ; 广告拦截规则
 ruleset=AdBlock,[]GEOSITE,category-ads-all
 ruleset=AdBlock,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Reject.yaml,86400
-
+ruleset=OpenAI,[]GEOSITE,openai
 ruleset=OpenAI,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/OpenAI.yaml,86400
+ruleset=AppleAndMicrosoft,[]GEOSITE,apple
+ruleset=AppleAndMicrosoft,[]GEOSITE,microsoft
 ruleset=AppleAndMicrosoft,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Apple.yaml,86400
 ruleset=AppleAndMicrosoft,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Microsoft.yaml,86400
+ruleset=GameAndPayPal,[]GEOSITE,paypal
 ruleset=GameAndPayPal,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Game.yaml,86400
 ruleset=GameAndPayPal,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/PayPal.yaml,86400
 ruleset=YouTube,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Complete/GlobalMedia/YouTube.yaml,86400
@@ -19,7 +22,7 @@ ruleset=YouTube,[]GEOSITE,youtube
 ruleset=GlobalMedia,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/GlobalMediaNoYoutube.yaml,86400
 ruleset=Bilibili,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Complete/MainlandMedia/Bilibili.yaml,86400
 ruleset=Bilibili,[]GEOSITE,bilibili
-ruleset=BiliINTL,[]GEOSITE,bilibili
+ruleset=Bilibili,[]GEOSITE,biliintl
 
 ruleset=Proxy,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/master/Rules_Provider/Integrate/Proxy.yaml,86400
 ruleset=Proxy,[]GEOSITE,geolocation-!cn
