添加丢失的cnbeta

--- a/Rules_Provider/Complete/Other/Proxy.yaml
+++ b/Rules_Provider/Complete/Other/Proxy.yaml
@@ -30,6 +30,7 @@ payload:
   - DOMAIN-SUFFIX,12vpn.net
   - DOMAIN-SUFFIX,1337x.to
   - DOMAIN-SUFFIX,138.com
+  - DOMAIN-SUFFIX,cnbeta.com.tw
   - DOMAIN-SUFFIX,141hongkong.com
   - DOMAIN-SUFFIX,141jj.com
   - DOMAIN-SUFFIX,141tube.com
