--- a/Rules_Provider/Integrate/Proxy.yaml
+++ b/Rules_Provider/Integrate/Proxy.yaml
@@ -1872,6 +1872,7 @@ payload:
   - DOMAIN-SUFFIX,fangeqiang.com
   - DOMAIN-SUFFIX,fanglizhi.info
   - DOMAIN-SUFFIX,fangmincn.org
+  - DOMAIN-SUFFIX,cnbeta.com.tw
   - DOMAIN-SUFFIX,fangong.org
   - DOMAIN-SUFFIX,fangongheike.com
   - DOMAIN-SUFFIX,fanhaodang.com
